--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,14 @@ directories = '6'
 inventory = '0.3'
 serde = { version = '1', features = ['derive'] }
 serde_json = '1'
+sha2 = '0.10'
 time = { version = '0.3', features = ['local-offset'] }
 ureq = '3'
 which = '8'
+
+[dev-dependencies]
+assert_cmd = '2'
+predicates = '3'
 
 [features]
 default = []
