chore: rename repository URLs to cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,4 @@ codegen-units = 1
 panic = 'abort'
 
 [package.metadata]
-repository = 'https://github.com/prodbyeagle/eaglePowerShell'
+repository = 'https://github.com/prodbyeagle/cli'
